@@ -5,6 +5,7 @@
 Version 1.1.8 work in progress
 ------------------------------
 - Bug: Fixed a typo that may cause issue when setting custom script packages with baseUrl option for CClientScript (Qiang)
+- Bug #2236: CJuiTabs - added id to ajax tabs (sebas)
 - Bug #2272: Fixed the bug of undefined index css in CTreeView (mdomba)
 - Bug #2274: CDbCriteria can't merge "with" anymore if a scope applied another "with" condition (Sam Dark, Michael)
 - Bug #2275: Fixed the bug that ajax error handler was not called in case of exception (mdomba)
